# NBAAGENT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  verify_metrics.py  verify_structlog.py
.github/: dependabot.yml
.github/workflows/: security.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
alembic/: env.py
alembic/versions/: 9402166567cd_add_unique_constraint_to_historical_odds.py  a1b2c3d4e5f6_add_users_table.py  b2c3d4e5f6a7_add_role_and_audit_log.py  e2b246866c67_create_initial_tables.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  main.tsx
docs/: SETUP.md  TROUBLESHOOTING.md
nba_betting_agent/: __init__.py
nba_betting_agent/agents/: __init__.py
nba_betting_agent/api/: __init__.py  app.py  auth.py  config.py  deps.py  schemas.py  server.py  state.py
nba_betting_agent/cli/: __init__.py  admin.py  (+4 more)
tests/: __init__.py  conftest.py  test_admin.py  test_analysis_agent.py  test_auth.py  test_calibration.py  test_cli.py  test_clv_tracker.py  test_discrepancy.py  test_espn_injuries.py  test_ev_calculator.py  test_formatters.py  test_games_repository.py  test_graph.py  test_historical_integration.py  test_lines_agent.py  test_llm_analyzer.py  test_metrics.py  test_ml_backtesting.py  test_ml_data.py  test_ml_features.py  test_ml_integration.py  test_ml_model.py  test_nba_client.py  test_normalizer.py  test_odds_api.py  test_odds_repository.py  test_rlm_detector.py  test_sharp_comparison.py  test_stats_agent.py  test_stats_cache.py  test_vig_removal.py
(+116 files in other folders)
